[package]
name = "dataset-pv-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32", "schemars"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
schemars = { version = "0.8.22", features = ["chrono"] }
